theme/static/css/hydroshare_core.css
/* ... */
#profile-menu #profile-menu-email, #profile-menu #profile-menu-fullname {
	overflow: hidden;
	text-overflow: ellipsis;
}

.display-none {
    display: none !important;
}

.display-block {
    display: block !important;
}

.profile-photo-error {
    text-align: right;
    margin-top: 20px;
    margin-left: 20px;
    padding: 10px 25px 10px 25px;
}

/* ===== Login box ===== */

.form-box {
	padding: 10px 15px 20px;
	border: 1px solid #DDD;
	background: #F5F5F5;
}
.form-box h4 {
	text-transform: uppercase;
	color: #666;
}
.form-box hr {
	border-bottom: 1px solid #dedede;
}
.login-social ul {
    font-size: 20px;
    margin: 0;
	padding: 0;
}
.login-social li {
    float: left;
    display: block;
    list-style-type: none;
    width: 40px;
    height: 40px;
    margin: 20px 5px 20px 0;
    text-align: center;
    line-height: 40px;
}
.login-social li#twitter {
	background: #1dcaff;
}
.login-social li#facebook {
	background: #3B5998;
}
.login-social li#google {
	background: #dd4b39;
}
.login-social li#twitter:hover,
.login-social li#facebook:hover,
.login-social li#google:hover {
    background: none;
}
.login-social li#twitter:hover a {
	color: #1dcaff;
}
.login-social li#facebook:hover a {
	color: #3B5998;
}
.login-social li#google:hover a {
	color: #dd4b39;
}
.login-social li a {
    color: #fff;
	padding: 10px;
}
.login-social li, .login-social li:hover {
    transition: background 0.3s;
    -webkit-transition: background 0.3s;
    -moz-transition: background 0.3s;
}
.login-social li a, .login-social li:hover a:hover{
    transition: color 0.3s;
    -webkit-transition: color 0.3s;
    -moz-transition: color 0.3s;
}
/* ===== Registration form popover ===== */

.signup .popover {
	min-width: 200px;
}

#signup{
    margin-bottom: 10px;
}

/* ===== Site search ===== */

.navbar-nav li#search {
	background: #00B4FF;
	background: linear-gradient(top, #00B4FF, #009DE0);
	background: -webkit-linear-gradient(top, #00B4FF, #009DE0);
	background: -moz-linear-gradient(top, #00B4FF, #009DE0);
	position: relative;
}
.navbar-nav li#search .search-box {
	position: absolute;
	right: 0;
	bottom: -70px;
	width: 250px;
	padding: 10px;
	background: #eaeaea;
	background: rgba(0, 0, 0, 0.65);
	display: none;
}
.navbar-nav li#search i.margin-2 {
	margin-left: 2px;
}

/* ===== Pagination ===== */

.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  background-color: #00B4FF;
  border-color: #00B4FF;
}

/* Helper Classes */

.top-zero {
	margin-top: 0;
}
.bottom-15 {
	margin-bottom: 15px;
}
.ui-icon {
	color: #666;
}
.tab-1 {
	margin-right: 15px;
}
.tab-2 {
	margin-right: 30px;
}
.tab-3 {
	margin-right: 45px;
}
.tab-3 {
	margin-right: 60px;
}

/* ===== Scroll to Top ===== */

.scrolltotop {
	height: 48px;
	width: 48px;
	border-color: #999;
	border: 1px solid rgba(0, 0, 0, 0.3);
	color: #999;
	color: rgba(0, 0, 0, 0.3);
	font-size: 18px;
	line-height: 38px;
	border-radius: 3px;
	text-align: center;
    background: rgba(255, 255, 255, 0.5);
}
/* ===== Resource edit page changes ===== */

.contact-table .icon-button, .funding-agencies-table .icon-button {
    float:left;
    background-color: transparent;
    border: 0;
    text-decoration: none;
}

.contact-table {
	table-layout: fixed;
}

.authors-wrapper > a:not(:first-child)::before, .authors-wrapper span:not(:first-child):not(.ui-sortable-helper) a::before,
.owners-wrapper a:not(:first-child)::before, .separate :not(:first-child)::before {
    content: "";
    width: 1px;
    display: inline-block;
    background-color: #999;
    height: 1em;
    margin: 0 4px;
    position: relative;
    top: 2px;
}

.authors-wrapper > a:not(:first-child)::before, .authors-wrapper span:not(:first-child):not(.ui-sortable-helper) a::before,
.owners-wrapper > a:not(:first-child)::before, .separate :not(:first-child)::before {
    content: "";
    width: 1px;
    display: inline-block;
    background-color: #999;
    height: 1em;
    margin: 0 4px;
    position: relative;
    top: 2px;
}

.authors-wrapper.sortable span:last-child a {
    margin-right: 10px;
}

.authors-wrapper a {
	cursor: pointer;
}

.contact-table td:last-child{
    width: calc(20% - 20px);
}

.hs-table {
	border-collapse: collapse !important;
	overflow: auto;
}

.hs-table tr {
	border: 1px solid #DDD;
	background: #FFF;
}

.hs-table td, .hs-table th {
	padding: 10px 18px !important;
}

.hs-table thead tr {
    border-bottom: 1px solid #DDD;
}

.hs-table thead tr th {
    background-color: #F1F1F1;
    text-overflow: ellipsis;
    overflow: hidden;
    border-bottom: 0 !important
}

.contact-table-view td {
	width: 25%;
}

.contact-table td {
	width: 20%;
	border-top: 0 !important;
	overflow: hidden;
	text-overflow: ellipsis;
}


#relatedResourcesTab{
    overflow:hidden;
}

#comments{
    padding-bottom: 15px;
    margin-top: 20px;
}

table.info-table > tbody > tr > td {
    padding-left: 15px
}

.res-header table.info-table > tbody > tr > th {
    white-space: nowrap;
    vertical-align: top;
}

.res-header table.info-table > tbody > tr > td {
    padding-bottom: 8px;
}

.res-header .agg-multidimensional_content {
    background-color: #9625aa;
}

.res-header .agg-time_series_content {
    background-color: #009688;
}

.res-header .agg-referenced_time_series_content {
    background-color: #4caf50;
}

.res-header .agg-geographic_feature_content {
    background-color: #795548;
}

.res-header .agg-geographic_raster_content {
    background-color: #708a97;
}

table.info-table {
	margin-bottom: 20px;
	word-break: break-word;
}

.res-header .collapsing {
    -webkit-transition: none;
    transition: none;
    display: none;
}

#resourceSpecificTab{
    overflow-x:hidden;
}
/* ... */

